--- a/.github/workflows/data-load.yml
+++ b/.github/workflows/data-load.yml
@@ -18,16 +18,15 @@ jobs:
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" > ec2_key.pem
           chmod 600 ec2_key.pem
-
       - name: Copiar archivos .sql a EC2
         run: |
-          scp -i ec2_key.pem -o StrictHostKeyChecking=no *.sql ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/
+          scp -i ec2_key.pem -o StrictHostKeyChecking=no *.sql ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/tmp/
 
       - name: Ejecutar archivos .sql en contenedor PostgreSQL
         run: |
           ssh -i ec2_key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-            for file in *.sql; do
+            for file in /tmp/*.sql; do
               echo "Ejecutando $file..."
-              docker exec -i postgresql-dev psql -U ${{ secrets.POSTGRES_USER }} -d ${{ secrets.POSTGRES_DB }} < "/home/${{ secrets.EC2_USER}}/$file"
+              docker exec -i postgresql-dev psql -U ${{ secrets.POSTGRES_USER }} -d ${{ secrets.POSTGRES_DB }} < "$file"
             done
           EOF
